<resources>
    <string name="app_name">InteractivePPT</string>
    <string name="title">INTERACTIVE PRESENTATION</string>
    <string name="description">Welcome</string>
    <string name="app_id">370728603269382</string>
    <string name="logout">Log out</string>
    <string name="description_placeholder">Survey description and additional instructions…</string>
    <string name="title_placeholder">survey title…</string>
    <string name="survey_title_label">Title</string>
    <string name="survey_description_label">Description</string>
    <string name="survey_questions_label">Questions</string>
    <string name="my_surveys_button_caption">My presentations</string>
    <string name="create_survey_button_caption">Create survey</string>
    <string name="load_survey_button_caption">Load presentation</string>
    <string name="survey_code">Presentation code</string>
    <string name="qr_read">Scan Qr code</string>
    <string name="input_code">Enter presentation code</string>
    <string name="title_activity_survey_code">Presentation code</string>
    <string name="title_input_code">Enter code:</string>
    <string name="send_code_button">Fetch presentation!</string>
    <string name="btnAddQuestion">Add</string>
    <string name="question">Questions</string>
    <string name="questionType">Question type:</string>
    <string name="options">Options:</string>
    <string name="questionText">Question</string>
    <string name="saveQuestion">Save</string>
    <string name="cancelQuestion">Cancel</string>
    <string name="chooser_title">Select presentation in which you want to attach this survey</string>
    <string name="surveyAttachment">Presentation</string>
    <string name="no_any_file_attached_msg">No file added yet</string>
    <string name="file_successfully_added_msg">Following file has been successfully added: </string>
    <string name="not_valid_file_type_msg">Selected file isn\'t PowerPoint presentation: </string>
    <string name="add_presentation_caption">Add</string>
    <string name="change_presentation_caption">Change</string>
    <string name="login_button_content">Log in with Facebook</string>
    <string name="try_again_button_content">Try again</string>
    <string name="reset_survey">Discard</string>
    <string name="create_survey">Create</string>
    <string name="openSurvey">Open survey</string>
    <string name="requestReply">Request reply</string>
    <string name="myPresentationsHeader">My presentations</string>
    <string name="subbedPresentationsHeader">Subscribed presentations</string>
    <string name="availableSurveysHeader">Available surveys</string>
    <string name="questionNamePlaceholder">Question</string>
    <string name="requiredQuestionLabel">Mandatory question:</string>
    <string name="addNewOptionSymbol">+</string>
    <string name="removeLastOptionSymbol">-</string>
    <string name="numOfSurveysLabel">Num of surveys:</string>
    <string name="accessCodeLabel">Access code:</string>
    <string name="authorNameLabel">Author:</string>
    <string name="newPptOptionLabel">New one</string>
    <string name="existingPptOptionLabel">Existing one</string>
    <string name="myPptsCaption">My presentations:</string>
    <string name="drawer_open">Open navigation list</string>
    <string name="drawer_close">Close navigation list</string>
    <string name="no_my_presentations">You haven\'t created any presentation yet</string>
    <string name="no_subscribed_presentations">There are no presentations on which you have subscribed</string>
    <string name="login_attempt_canceled">Login attempt has been cancelled.</string>
    <string name="login_attempt_failed">Login attempt has failed.</string>
    <string name="chat">Chat</string>
    <string name="no_ppt_session">Communication with presenter could not be established. Chat and reply-requests will be disabled in this session</string>
    <string name="mute_chat">Mute chat</string>
    <string name="option">"Option "</string>
    <string name="empty_options_error">There are some undefined options!</string>
    <string name="no_options_error">Selected question type requires options to be defined!</string>
    <string name="question_name_empty_error">Question name has to be defined!</string>
    <string name="question_creation_failure">Failed to add question:</string>
    <string name="message_broadcast_error">Server was unable to process and forward your message to other chat participants!</string>
    <string name="message_send_error">An error occurred while sending message to the server! Check your Internet connection and try again</string>
    <string name="surveys_fetch_error">An error occurred while fetching survey list</string>
    <string name="survey_fetch_error">An error occurred while fetching requested survey!</string>
    <string name="message_time_format">dd/MM/yyyy (HH:mm:ss)</string>
    <string name="survey_creation_error">An error occurred while sending survey answers. Check your Internet connection and try again</string>
    <string name="no_questions_error">Survey currently doesn\'t contain any questions!</string>
    <string name="no_corresponding_ppt_error">Survey doesn\'t have specified belonging presentation!</string>
    <string name="no_survey_description_error">Survey description is not set!</string>
    <string name="no_survey_title_error">Survey title is not set!</string>
    <string name="alert_create_survey_message">Are you sure you want to create survey with specified data and structure?</string>
    <string name="alert_create_survey_title">Warning</string>
    <string name="survey_creation_failure_reason">Failed to create survey:</string>
    <string name="presentations_fetch_error">An error occurred while fetching list of your presentations.</string>
    <string name="no_my_ppts_error">There are no presentations created by you.</string>
    <string name="survey_info_id">Survey id: </string>
    <string name="survey_info_description">Survey description: </string>
    <string name="survey_info_total_questions">Survey\'s total number of questions: </string>
    <string name="no_ppt_with_corresponding_code_error">Presentation with specified access code does not exist!</string>
    <string name="presentation_fetch_error">An error occurred while fetching requested presentation</string>
    <string name="answers_already_submitted_error">You have already sent answers for this survey!</string>
    <string name="send_answers_error">An error occurred while sending answers for this surveys</string>
    <string name="answers_sent_successfully">Your answers have been successfully sent!</string>
    <string name="survey_not_filled_error">It is not possible to submit answers because there are still some unanswered mandatory questions!</string>
    <string name="registration_failure_error">An error occurred while registering on the server! Server is probably currently unavailable</string>
    <string name="push_notification_title">InteractivePPT - </string>
    <string name="push_notification_new_ppt_version_available">New version of presentation is now available: </string>
    <string name="presentation_doesnt_exist_anymore">Presentation with specified access code does not exist anymore!</string>
    <string name="presentation_subscription_error">An error has occurred while trying to subscribe on this presentation!</string>
    <string name="reply_request_failed">An error has occurred while trying to send reply-request! Try again later…</string>
    <string name="prev_reply_request_still_not_processed">Please, be patient! Your previously sent reply-request is still waiting to be processed by presenter</string>
    <string name="reply_request_sent_successfully">You have successfully sent reply-request!</string>
    <string name="no_option">no</string>
    <string name="yes_option">yes</string>
    <string name="submit_answers">Submit answers</string>
    <string name="clear_answers">Clear all</string>
    <string name="scan_qr_code">Scan Qr code</string>
    <string name="survey_created_successfully">Survey has been created successfully!</string>
    <string name="presentation_store_error">An error occurred while storing attached presentation. Server environment isn\'t properly configured.</string>
</resources>