<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:title="@string/my_surveys_button_caption" />
        <item
            android:id="@+id/nav_second_fragment"
            android:title="@string/create_survey_button_caption" />
        <item
            android:id="@+id/nav_third_fragment"
            android:title="@string/load_survey_button_caption" />
        <item>
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_logout"
                        android:title="@string/logout" />
                </group>
            </menu>
        </item>
    </group>
</menu>