<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAddQuestionBackground"  >

    <TextView
        android:text="@string/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/questionText"
        android:hint="@string/questionNamePlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/questionType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/requiredQuestionLabel" />
        <CheckBox
            android:id="@+id/answerRequired"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="128dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pumpOrDumpOptions">

        <TextView
            android:text="@string/options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:text="@string/addNewOptionSymbol"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddOption" />

        <Button
            android:text="@string/removeLastOptionSymbol"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRemoveOption" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionList"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="335dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstOptionNamePlaceholder"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondsOptionNamePlaceholder"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/saveQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>