<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/com_facebook_button_like_background_color_selected"
    tools:context="hr.air.interactiveppt.CreateSurvey">
    <FrameLayout
        android:id="@+id/surveyTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/survey_title_label"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/title_placeholder" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/surveyDescription"
        android:layout_below="@id/surveyTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:text="@string/survey_description_label"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/description_placeholder"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/surveyQuestions"
        android:layout_below="@id/surveyDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/survey_questions_label"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </FrameLayout>
</RelativeLayout>
