<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.air.interactiveppt.GetCode">

    <TextView
        android:text="@string/survey_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/naslovAktivnosti"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/qrRead"
        android:layout_below="@+id/naslovAktivnosti"
        android:text="@string/qr_read"
        android:layout_alignStart="@+id/upisiSifru"
        android:layout_alignEnd="@+id/upisiSifru" />

    <Button
        android:text="@string/input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upisiSifru"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
